[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "My first project"
authors = ["Daniil Islamgaliev"]
readme = "README.md"
repository = https://github.com/DLineX/python-project-49
classifiers = [
    "Development Status :: Alpha"
	"Environment :: Console"
	"Framework :: Flake8"
	"Intended Audience :: Education"
	"License :: Free for non-commercial use"
	"Natural Language :: Russian"
	"Natural Language :: English"
	"Operating System :: Microsoft :: Windows :: Windows 10"
	"Programming Language :: Python :: 3.12"
	"Topic :: Education"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
